--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   google_fonts: ^5.1.0
   animated_text_kit: ^4.2.2
   delayed_display: ^2.0.0
+  url_launcher: ^6.1.14
+  map_launcher: ^3.0.1
+
+
 
 dev_dependencies:
   flutter_test:
