--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+  		<string>tel</string>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
 		<string>comgooglemaps</string>
 		<string>baidumap</string>
 		<string>iosamap</string>
