--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   delayed_display: ^2.0.0
   url_launcher: ^6.1.14
   map_launcher: ^3.0.1
+  flutter_phone_direct_caller: ^2.1.1
 
 
 
@@ -28,3 +29,4 @@ flutter:
 
   assets:
   - assets/Fr-Vinod.png
+  - assets/Chapel.jpeg
